[tool.poetry]
name = "repayment"
version = "0.1.0"
description = ""
authors = ["pp-ghw <huawaai@peerpower.co.th>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
